--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,8 @@
 			<version>3.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 	</dependencies>
 
